[profile.release]
panic = 'unwind'

[workspace]
members = [
	"merkle-distributor",
	"zenlink-protocol",
	"zenlink-protocol/rpc",
	"zenlink-protocol/rpc/runtime-api",
	"zenlink-stable-amm",
	"zenlink-stable-amm/rpc",
	"zenlink-stable-amm/rpc/runtime-api",
	"zenlink-swap-router",
]

resolver = "2"

[workspace.dependencies]
zenlink-protocol               = { path = "zenlink-protocol", default-features = false }
zenlink-protocol-runtime-api   = { path = "zenlink-protocol/rpc/runtime-api", default-features = false}
zenlink-stable-amm             = { path = "zenlink-stable-amm", default-features = false }
zenlink-stable-amm-runtime-api = { path = "zenlink-stable-amm/rpc/runtime-api", default-features = false }

codec                   = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
cumulus-primitives-core = { version = "0.4.0", default-features = false }
frame-benchmarking      = { version = "25.0.0", default-features = false }
frame-support           = { version = "25.0.0", default-features = false }
frame-system            = { version = "25.0.0", default-features = false }
hex-literal             = { version = "0.3.1" }
jsonrpsee               = { version = "0.16.2", features = ["server", "macros"] }
log                     = { version = "0.4.20", default-features = false }
pallet-balances         = { version = "25.0.0", default-features = false }
pallet-timestamp        = { version = "24.0.0", default-features = false }
pallet-xcm              = { version = "4.0.0", default-features = false }
scale-info              = { version = "2.10.0", default-features = false, features = ["derive"] }
serde                   = { version = "1.0.189", default-features = false }
serde_json              = { version = "1.0.81", default-features = false  }
sp-api                  = { version = "23.0.0", default-features = false }
sp-arithmetic           = { version = "20.0.0", default-features = false }
sp-blockchain           = { version = "25.0.0", default-features = false }
sp-core                 = { version = "25.0.0", default-features = false }
sp-io                   = { version = "27.0.0", default-features = false }
sp-rpc                  = { version = "23.0.0", default-features = false }
sp-runtime              = { version = "28.0.0", default-features = false }
sp-std                  = { version = "12.0.0", default-features = false }
sp-version              = { version = "12.0.0", default-features = false }
xcm                     = { package = "staging-xcm", version = "4.0.0", default-features = false }
xcm-builder             = { package = "staging-xcm-builder", version = "4.0.0", default-features = false }
xcm-executor            = { package = "staging-xcm-executor", version = "4.0.0", default-features = false }

orml-tokens             = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
orml-traits             = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.3.0", default-features = false }
