[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true}
scale-info = { workspace = true }
codec = { workspace = true, features = ["derive"] }

frame-system = { workspace = true }
frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true, optional = true }

pallet-balances = { workspace = true }

orml-traits = { workspace = true }

[dev-dependencies]
orml-tokens = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "serde/std",
    "scale-info/std",
    "sp-core/std",
    "frame-system/std",
    "sp-runtime/std",
    "frame-support/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-balances/std",
    "hex-literal",
    "sp-io/std"
]

runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal",
    "sp-io",
]
try-runtime = [ "frame-support/try-runtime" ]
