[package]
name = "zenlink-protocol"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, features = ["derive"] }
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
xcm = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }

orml-traits = { workspace = true }
orml-tokens = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "scale-info/std",

    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",

    "xcm/std",

    "cumulus-primitives-core/std",

    "orml-traits/std",
    "orml-tokens/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = [ "frame-support/try-runtime" ]
