[package]
name = "zenlink-swap-router"
version = "0.1.0"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
codec = { workspace = true }
scale-info = { workspace = true }

sp-core = { workspace = true  }
sp-runtime = { workspace = true  }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }

frame-support = { workspace = true  }
frame-system = { workspace = true  }
frame-benchmarking = { workspace = true, optional = true }

zenlink-protocol = { workspace = true  }
zenlink-stable-amm = { workspace = true  }
orml-traits = { workspace = true }

[dev-dependencies]
orml-traits = { workspace = true }
orml-tokens = { workspace = true }
pallet-balances = { workspace = true  }
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-timestamp = { workspace = true  }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "zenlink-protocol/std",
    "zenlink-stable-amm/std"
]

runtime-benchmarks = [
    "frame-benchmarking",
]
try-runtime = [ "frame-support/try-runtime" ]
