[package]
name = "zenlink-protocol-rpc"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { workspace = true }
codec = { workspace = true }
jsonrpsee = { workspace = true }

# Substrate packages
sp-blockchain = { workspace = true }
sp-api = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }

# Local packages
zenlink-protocol = { workspace = true }
zenlink-protocol-runtime-api = { workspace = true }
