[package]
name = "zenlink-stable-amm-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
codec = { workspace = true }

jsonrpsee = { workspace = true }


sp-blockchain = { workspace = true }
sp-api = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }

zenlink-stable-amm-runtime-api = { workspace = true }
