[package]
name = "zenlink-protocol-runtime-api"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
codec = { workspace = true }

sp-api = { workspace = true }
sp-std = { workspace = true }

zenlink-protocol = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'serde_json/std',
    'zenlink-protocol/std'
]
