[package]
name = "zenlink-stable-amm-runtime-api"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }

zenlink-stable-amm = { path = '../..', default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    'sp-std/std',
    "zenlink-stable-amm/std",
]
