[package]
name = "zenlink-stable-amm-runtime-api"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }

zenlink-stable-amm = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    'sp-std/std',
    "zenlink-stable-amm/std",
]
